// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiTourStep can be closed 1`] = `
<div
  class="ouiPopover ouiPopover--anchorLeftUp"
  data-test-subj="test subject string"
  offset="10"
>
  <div
    class="ouiPopover__anchor"
  >
    <span>
      Test
    </span>
  </div>
</div>
`;

exports[`OuiTourStep can override the footer action 1`] = `
<div
  class="ouiPopover ouiPopover--anchorLeftUp"
  data-test-subj="test subject string"
  offset="10"
>
  <div
    class="ouiPopover__anchor"
  >
    <span>
      Test
    </span>
  </div>
</div>
`;

exports[`OuiTourStep can set a minWidth 1`] = `
<div
  class="ouiPopover ouiPopover--anchorLeftUp"
  data-test-subj="test subject string"
  offset="10"
>
  <div
    class="ouiPopover__anchor"
  >
    <span>
      Test
    </span>
  </div>
</div>
`;

exports[`OuiTourStep can turn off the beacon 1`] = `
<div
  class="ouiPopover ouiPopover--anchorLeftUp"
  data-test-subj="test subject string"
  offset="0"
>
  <div
    class="ouiPopover__anchor"
  >
    <span>
      Test
    </span>
  </div>
</div>
`;

exports[`OuiTourStep is rendered 1`] = `
<div
  class="ouiPopover ouiPopover--anchorLeftUp"
  data-test-subj="test subject string"
  offset="10"
>
  <div
    class="ouiPopover__anchor"
  >
    <span>
      Test
    </span>
  </div>
</div>
`;
